[package]
name = "rs-rok-worker-wasm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "WASM bridge for rs-rok binary protocol in Cloudflare Workers"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rs-rok-protocol = { path = "../protocol", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
